// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout/Breadcrumb Default smoke-test 1`] = `
<div class="sc-dcJsrY brcKKN">
  <a href="/"
     class="sc-kAyceB bTGSro"
  >
    <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
          style="text-transform: uppercase;"
    >
      Famiglie di prodotto
    </span>
  </a>
  <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
    <svg xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
         viewbox="0 0 50 50"
    >
      <g fill="currentColor"
         fill-rule="evenodd"
         transform="matrix(-1 0 0 1 37.722 1)"
      >
        <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
        </path>
      </g>
    </svg>
  </span>
  <a href="/"
     class="sc-kAyceB bTGSro"
  >
    <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
          style="text-transform: uppercase;"
    >
      Elettromandrino ATC
    </span>
  </a>
  <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
    <svg xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
         viewbox="0 0 50 50"
    >
      <g fill="currentColor"
         fill-rule="evenodd"
         transform="matrix(-1 0 0 1 37.722 1)"
      >
        <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
        </path>
      </g>
    </svg>
  </span>
  <a href="/"
     class="sc-kAyceB bTGSro"
  >
    <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
          style="text-transform: uppercase;"
    >
      ES3 Line
    </span>
  </a>
  <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
    <svg xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
         viewbox="0 0 50 50"
    >
      <g fill="currentColor"
         fill-rule="evenodd"
         transform="matrix(-1 0 0 1 37.722 1)"
      >
        <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
        </path>
      </g>
    </svg>
  </span>
  <span class="sc-gEvEer gpJuNj sc-iGgWBj daVzqg"
        style="text-transform: uppercase;"
  >
    ES327
  </span>
</div>
`;

exports[`Layout/Breadcrumb OnPrimary smoke-test 1`] = `
<div class="sc-aXZVg eJyBUS">
  <div style="max-width: 100%;">
    <div class="sc-dcJsrY brcKKN">
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          Famiglie di prodotto
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          Elettromandrino ATC
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          ES3 Line
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <span class="sc-gEvEer gpJuNj sc-iGgWBj daVzqg"
            style="text-transform: uppercase;"
      >
        ES327
      </span>
    </div>
  </div>
</div>
`;

exports[`Layout/Breadcrumb OnSecondary smoke-test 1`] = `
<div class="sc-aXZVg dFjAEm">
  <div style="max-width: 100%;">
    <div class="sc-dcJsrY brcKKN">
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          Famiglie di prodotto
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          Elettromandrino ATC
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          ES3 Line
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <span class="sc-gEvEer gpJuNj sc-iGgWBj daVzqg"
            style="text-transform: uppercase;"
      >
        ES327
      </span>
    </div>
  </div>
</div>
`;

exports[`Layout/Breadcrumb Wrap smoke-test 1`] = `
<div class="sc-aXZVg dFjAEm">
  <div style="max-width: 380px;">
    <div class="sc-dcJsrY brcKKN">
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          Famiglie di prodotto
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          Elettromandrino ATC
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <a href="/"
         class="sc-kAyceB bTGSro"
      >
        <span class="sc-gEvEer huqeYn sc-iGgWBj daVzqg"
              style="text-transform: uppercase;"
        >
          ES3 Line
        </span>
      </a>
      <span class="sc-fqkvVR eOuSDV sc-gsFSXq fMfFsy">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      <span class="sc-gEvEer gpJuNj sc-iGgWBj daVzqg"
            style="text-transform: uppercase;"
      >
        ES327
      </span>
    </div>
  </div>
</div>
`;
